2014-02-19 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h, src/iapi.cpp: add functions to work with coordinates

2014-02-18 John Wu <John dot Wu at ACM dot org>
	* src/bord.h: add member variable shape to ibis::bord::column, add
	a new constructor

2014-02-17 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h, src/iapi.cpp: add a new in-memory API that
	constructs query expressions through function calls (without a
	parser of strings)

2014-02-16 John Wu <John dot Wu at ACM dot org>
	* src/bord.h, src/bord.cpp: add constructor to take a list of
	columns as input

2014-02-12 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: check argument 1 (col) in the constructor of
	ibis::column::indexLock, do nothing when col == 0 (this allows a
	nil column object to be used to create an index lock, however,
	that index lock will do nothing)

2014-02-11 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp, src/idirekte.cpp: check for col being nil

2014-02-10 John Wu <John dot Wu at ACM dot org>
	* src/selectClause.cpp:397 change <= to <, the equal sign allows
	a selection expression without an aggregator to be declared as
	being separable, which violates the intention of the function
	(this addresses the problem reported by Sean McNamara on 2/7/2014)

2014-02-06 John Wu <John dot Wu at ACM dot org>
	* src/column.h, src/column.cpp: add function fullname to deal with
	the printing of column names
	* src/irelic.cpp, src/ibin.cpp: allow the read function and some
	constructors to proceed with null col value
	* src/column.h: change column::mutexLock to allow the first
	argument of the constructor to be nil
	* src/index.cpp: change versions of function activate to allow the
	member variable col to be nil

2014-02-05 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.cpp: clean up the function mergeBuffers

2014-02-04 John Wu <John dot Wu at ACM dot org>
	* configure.ac: change uint32_t to unsigned in the sample test for
	c++11 flag