@@ -1,5 +1,8 @@
 2014-02-19 John Wu <John dot Wu at ACM dot org>
 	* src/iapi.h, src/iapi.cpp: add functions to work with coordinates
+	* src/bord.cpp: make a copy of columns from the user provided list
+	of columns, becaue the destructor of ibis::part delete the columns
+	it knows about
 
 2014-02-18 John Wu <John dot Wu at ACM dot org>
 	* src/bord.h: add member variable shape to ibis::bord::column, add
